examples/test/testpolicy8977.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8977
  namespace: namespace456
spec:
  podSelector:
    matchLabels:
      key13: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value8
          key37: value34
          key32: value45
      podSelector:
        matchLabels:
          key45: value15
